--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,14 +1,60 @@
 .button {
-    align-items: center;
+    align-self: center;
     background: #333;
     border-radius: 50%;
     cursor: pointer;
     display: flex;
-    font-size: 45px;
-    height: 110px;
-    justify-content: center;
-    width: 110px;
+    justify-self: center;
     transition: filter 0.3s ease-in;
+}
+
+@media only screen and (min-width: 1550px) {
+    .button {
+        font-size: 52px;
+        height: 110px;
+        width: 110px;
+    }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1549px) {
+    .button {
+        font-size: 42px;
+        height: 80px;
+        width: 80px;
+    }
+}
+
+
+@media only screen and (min-width: 960px) and (max-width: 1199px) {
+    .button {
+        font-size: 32px;
+        height: 64px;
+        width: 64px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .button {
+        font-size: 24px;
+        height: 48px;
+        width: 48px;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+    .button {
+        font-size: 45px;
+        height: 84px;
+        width: 84px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .button {
+        font-size: 45px;
+        height: 72px;
+        width: 72px;
+    }
 }
 
 .button:hover {
@@ -21,7 +67,7 @@
 }
 
 .button.zero {
-    width: 210px;
+    width: 75%;
     grid-column: 1 / span 2;
     border-radius: 57.5px;
     position: relative;
