--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -59,8 +59,9 @@
 .buttons {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(4, max-content);
+    grid-template-rows: repeat(5, max-content);
+    justify-content: space-around;
 }
 
 .button {
